<resources>
    <string name="app_name">TochatteR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="login">LOGIN</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_e_mail_address">Enter your e-mail address</string>
    <string name="your_message">Your message</string>
    <string name="i_don_t_have_an_account">I don\'t have an account</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_status">Enter your status</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="create_group">Create Group</string>
    <string name="find_friend">Find Friend</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="take_photo">Take Photo</string>
    <string name="send_message">Send Message</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="enter_group_name_search">Enter group name for search</string>
    <string name="enter_user_name_for_search">Enter user name for search</string>
</resources>