<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <include
        android:id="@+id/settings_chat_bar_layout"
        layout="@layout/app_bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/settings_chat_bar_layout"
        android:padding="10dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cimg_set_profile_picture"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:src="@drawable/profile_photo"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="4dp">

        </de.hdodenhof.circleimageview.CircleImageView>

        <EditText
            android:id="@+id/edt_set_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_your_username"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_set_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_your_status"
            android:inputType="text"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_profile_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/update"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>